meta-lead-ads-package/main/default/objects/Meta_Page_Subscription__c/Meta_Page_Subscription__c.object-meta.xml
<CustomObject>
    <label>Meta Page Subscription</label>
    <nameField>
        <label>Meta Page Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Page Subscription</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>