meta-lead-ads-package/main/default/objects/Meta_Page_Subscription__c/fields/Enable_Lead_Creation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Lead_Creation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Lead Creation</label>
    <type>Checkbox</type>
</CustomField>