meta-lead-ads-package/main/default/objects/Meta_Page_Subscription__c/fields/Enable_Logs__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logs__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Logs</label>
    <type>Checkbox</type>
</CustomField>