meta-lead-ads-package/main/default/objects/Meta_Page_Subscription__c/fields/Page_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Page_Access_Token__c</fullName>
    <label>Page Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>