meta-lead-ads-package/main/default/objects/Meta_Page_Subscription__c/fields/Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Page_ID__c</fullName>
    <label>Page ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>